--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "yttml-ts",
+  "name": "ytt-gen",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
-    "commander": "^14.0.0",
     "fast-xml-parser": "^5.2.5",
     "srt-parser-2": "^1.2.3",
     "webvtt-parser": "^2.2.0",
@@ -18,6 +19,6 @@
   },
   "devDependencies": {
     "@types/node": "^24.0.1",
-    "typescript": "^5.8.3"
+    "typescript": "5.3.3"
   }
 }
