--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "declaration": true,
     "outDir": "dist",
+    "declaration": true,
     "strict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src"]
 }
